# ServersProject

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Matrix.cpp  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Point.cpp  Point.h  Searchable.h  Searcher.h  Server.h  Solver.h  SolverSearcher.h  State.cpp  State.h  StringReverser.cpp  StringReverser.h  TestAstar.cpp  data.txt  graphs .txt  main.cpp  solution.txt  tests.txt  (+2 more)
